add cloning instructions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
 
 		<p>... inferior to keeping track of projects through email attachments.</p>
 
-                <h2>Cloning a repository...</h2>
+                <h2><br>Cloning a repository...</br></h2>
+				<p><b>Requirements...<b><p>
+				<ul> 
+					<ol> On the right side, look for the clone URL directly under the settings button.</ol>
+					<ol>Copy that to the clipboard</ol>
+					<ol>Open a terminal (Git Bash or the Command Prompt if you're using Windows) and navigate to the directory you wish to clone to</ol>
+					<ol> Once you're at the direction, type into the terminal: "git clone " (including the spaces, but not including the quotation marks)</ol>
+					<ol>Use your terminal to "paste" the URL in. (Make sure it starts with https; if not, you'll need to use an ssh key and most students probably won't have a key already set up)</ol>
+					<ol>terminal should now look something like this:</ol>
+					<ol><b> git clone https://github.com/ "rest of clone url"<b></ol>
+					<ol>Press enter to do the "git clone" operation.</ol>
+					<ol>Once you've done that, "cd" into the directory.</ol>
+				</ul>
+				
 
 		<p>... is leading us into war.  <a href="http://en.wikipedia.org/wiki/Clone_Wars_(Star_Wars)">The Clone Wars</a>, that is.</p>
 
